# NumericalMath

./: CMakeLists.txt  README.md  main.c
include/: math_types.h  matrix_math.h  utilities.h
src/: matrix_math.c  utilities.c
tests/: CMakeLists.txt  test_matrix.c
